--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
   <div class="login-container">
     <h2>Login</h2>
     <!-- action ko login.php pe point karo -->
-    <form action="purchase.html" method="post">
+    <form action="purchase.html" method="get">
       <div class="form-group">
         <label for="username">Username:</label>
         <!-- name attribute zaroori hai -->
