--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
     <!-- action ko login.php pe point karo -->
     <form action="purchase.html" method="get">
       <div class="form-group">
-        <label for="username">Username:</label>
+        <label for="username">Usemeet:</label>
         <!-- name attribute zaroori hai -->
         <input type="text" id="username" name="username" required>
       </div>
