--- a/vs.html
+++ b/vs.html
@@ -6,11 +6,14 @@
             {
         
 
-            document.body.style.backgroundcolor="red";
+            document.getElementById("myDIV").body.style.backgroundcolor="red";
             }
         </script>
     </head>
     <body>
+        <div id="myDIV">
+            HELLO BHAI
+        </div>
         <button value="click hare" onclick="colorchange()">click color</button>
     </body>
 </html>
