--- a/vs.html
+++ b/vs.html
@@ -9,6 +9,13 @@
             document.getElementById("myDIV").body.style.backgroundcolor="red";
             }
         </script>
+        <style>
+            #myDiv{
+                height: 100px;
+                wodth: 200px;
+                background color: orange
+            }
+        </style>
     </head>
     <body>
         <div id="myDIV">
