Fix CSS syntax errors in vs.htmlty

--- a/vs.html
+++ b/vs.html
@@ -13,7 +13,8 @@
             #myDiv{
                 height: 100px;
                 wodth: 200px;
-                background color: orange
+                background-color: orange;
+                color: white;
             }
         </style>
     </head>
