--- a/vs.html
+++ b/vs.html
@@ -1,27 +1,32 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <script>
-            function colorchange()
-            {
-        
 
-            document.getElementById("myDIV").body.style.backgroundcolor="red";
-            }
-        </script>
-        <style>
-            #myDiv{
-                height: 100px;
-                wodth: 200px;
-                background-color: orange;
-                color: white;
-            }
-        </style>
-    </head>
-    <body>
-        <div id="myDIV">
-            HELLO BHAI
-        </div>
-        <button value="click hare" onclick="colorchange()">click color</button>
-    </body>
+ <!DOCTYPE html>
+<html>
+<head>
+<style> 
+#myDIV {
+  width: 300px;
+  height: 300px;
+  background-color: coral;
+  color: white;
+}
+</style>
+</head>
+<body>
+<h1>Change background-color with JavaScript</h1>
+
+<p>Click the "Try it" button to set the background-color property of the DIV element to "lightblue":</p>
+
+<button onclick="myFunction()">Try it</button>
+
+<div id="myDIV">
+  <h1>Hello</h1>
+</div>
+
+<script>
+function myFunction() {
+  document.getElementById("myDIV").style.backgroundColor = "lightblue";
+}
+</script>
+
+</body>
 </html>
