--- a/pandu.html
+++ b/pandu.html
@@ -8,7 +8,8 @@
 <body>
     <section class="box">
         <div class="face">
-            <img src="panda.png" height="100%" width="100%"
+            <img src="panda.png" height="50%" width="50%"
+            <input type="text" placeholder="username">
         </div>
     </section>
 </body>
